# sdk

./: LICENSE  README.md  config_and_build_all.sh
nusai/: CMakeLists.txt
nusai/include/nusai/: interpreter.h
nusai/scripts/: config.sh  executable.sh  reinstall.sh  test.sh  uninstall.sh
nusai/src/nusai/: interpreter.cc
nusal/: CMakeLists.txt
nusal/example/: contoh.nusa
nusal/include/nusal/: alat.h  lexer.h  nusal.h  tipe_token.h  tipe_token_data.h  token.h
nusal/scripts/: config.sh  executable.sh  format.sh  test.sh  uninstall.sh
nusal/src/: main.cc
nusal/src/nusal/: alat.cc  lexer.cc  nusal.cc  tipe_token.cc  tipe_token_data.cc  token.cc
nusal/test/: alat_test.cc  nusal_test.cc
nusantara/: CMakeLists.txt
nusantara/examples/: file.nusa  file2.nusa
nusantara/include/data/: parser_rule_data.h  semantics_rule_data.h  tipe_token_data.h
nusantara/include/interpreter/: interpreter.h  kesalahan_interpret.h
nusantara/include/lexer/: alat.h  lexer.h  tipe_token.h  tipe_token_data.h  token.h  token_stream.h
nusantara/include/ncpp/alat/: mpfr.h  mpz.h  string.h
nusantara/include/ncpp/stream/: i_streamable.h
nusantara/include/ncpp/string/: i_stringfy.h
nusantara/include/ncpp/tipe_data/: bilangan.h  bilangan_bulat.h  bilangan_desimal.h  i_nilai_bilangan.h  i_tipe_data.h
nusantara/include/ndebug/: ndebug.h
nusantara/include/nusad/: nusad.h
nusantara/include/nusai/: interpreter.h  kesalahan_interpret.h
nusantara/include/nusal/: alat.h  lexer.h  nusal.h  tipe_token.h  tipe_token_data.h  token.h
nusantara/include/nusap/: kesalahan_parse.h  node.h  parser.h  tipe_node.h  visitor.h
nusantara/include/parser/: kesalahan_parse.h  node.h  parse_rule.h  parse_tree.h  parser.h  tipe_node.h  visitor.h
nusantara/include/semantic_analysis/: semantic_analysis.h
nusantara/include/semantics/: instruction.h  kesalahan_semantics.h  semantics.h
nusantara/lib/: inti.nusa  konsol.nusa
nusantara/scripts/: config.sh  debug.sh  executable.sh  format.sh  test.sh  uninstall.sh
nusantara/src/: main.cc
nusantara/src/interpreter/: interpreter.cc  kesalahan_interpret.cc
nusantara/src/lexer/: alat.cc  lexer.cc  tipe_token.cc  tipe_token_data.cc  token.cc  token_stream.cc
nusantara/src/ncpp/alat/: mpfr.cc  mpz.cc  string.cc
nusantara/src/ncpp/string/: i_stringfy.cc
nusantara/src/ncpp/tipe_data/: bilangan.cc  bilangan_bulat.cc  bilangan_desimal.cc
nusantara/src/nusai/: interpreter.cc  kesalahan_interpret.cc
nusantara/src/nusal/: alat.cc  lexer.cc  nusal.cc  tipe_token.cc  tipe_token_data.cc  token.cc
nusantara/src/nusap/: kesalahan_parse.cc  node.cc  parser.cc  tipe_node.cc  visitor.cc
nusantara/src/parser/: kesalahan_parse.cc  node.cc  parse_rule.cc  parse_tree.cc  parser.cc  tipe_node.cc  visitor.cc
nusantara/src/semantic_analysis/: semantic_analysis.cc
nusantara/src/semantics/: instruction.cc  kesalahan_semantics.cc  semantics.cc
nusap/: CMakeLists.txt
nusap/example/: contoh.nusa
nusap/include/nusap/: kesalahan_parse.h  node.h  parser.h  tipe_node.h  visitor.h
nusap/scripts/: config.sh  executable.sh  test.sh  uninstall.sh
nusap/src/: main.cc
nusap/src/nusap/: kesalahan_parse.cc  node.cc  parser.cc  tipe_node.cc  visitor.cc
